--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.6",
     "react-day-picker": "^7.3.0",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-flex": "^2.2.8",
     "react-grid-layout": "^0.16.6",
