Set loading view

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-dom": "^16.8.6",
     "react-flex": "^2.2.8",
     "react-grid-layout": "^0.16.6",
+    "react-loading-overlay": "^1.0.1",
+    "react-overlay-loader": "0.0.3",
     "react-responsive-container": "0.0.0",
     "react-scripts": "3.0.1",
     "react-sizeme": "^2.6.7",
+    "react-spinners": "^0.5.4",
     "react-vis": "^1.11.7",
     "recharts": "^1.6.2"
   },
