--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chart.js": "^2.8.0",
     "react": "^16.8.6",
+    "react-calendar-heatmap": "^1.8.0",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.6",
     "react-day-picker": "^7.3.0",
