--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.8.1",
     "chart.js": "^2.8.0",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-calendar-heatmap": "^1.8.0",
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.7.6",
