--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-grid-layout": "^0.16.6",
     "react-loading-overlay": "^1.0.1",
     "react-overlay-loader": "0.0.3",
+    "react-overlays": "^1.2.0",
     "react-responsive-container": "0.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
