--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-loading-overlay": "^1.0.1",
     "react-overlay-loader": "0.0.3",
     "react-overlays": "^1.2.0",
+    "react-progress-button": "^5.1.0",
     "react-responsive-container": "0.0.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
