--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@react-firebase/auth": "^0.2.9",
     "apexcharts": "^3.8.1",
     "chart.js": "^2.8.0",
+    "connect-history-api-fallback": "^1.6.0",
     "firebase": "^6.2.4",
+    "koa-connect": "^2.0.1",
     "react": "^16.8.6",
     "react-apexcharts": "^1.3.3",
     "react-calendar-heatmap": "^1.8.0",
